--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -1,14 +1,13 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @property.description %>
-</p>
-
-<p>
-  <strong>Active:</strong>
-  <%= @property.active %>
-</p>
-
-<%= link_to 'Edit', edit_property_path(@property) %> |
-<%= link_to 'Back', properties_path %>
+<div class="container">
+  <p id="notice"><%= notice %></p>
+  <p>
+    <strong>Description:</strong>
+    <%= @property.description %>
+  </p>
+  <p>
+    <strong>Active:</strong>
+    <%= @property.active %>
+  </p>
+  <%= link_to 'Edit', edit_property_path(@property), class: 'btn btn-primary' %>
+  <%= link_to 'Back', properties_path, class: 'btn btn-primary' %>
+</div>
