--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,19 @@
  *= require_tree .
  *= require_self
  */
+
+@import "bootstrap";
+@import "font-awesome";
+
+html {
+  min-height: 100vh;
+  height: 100vh
+}
+
+body {
+  height: 100%
+}
+
+.form-actions {
+  margin-top: 15px
+}
