--- a/app/views/goods/new.html.erb
+++ b/app/views/goods/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Good</h1>
-
-<%= render 'form', good: @good %>
-
-<%= link_to 'Back', goods_path %>
+<div class="container">
+  <h1>New Good</h1>
+  <%= render 'form', good: @good %>
+  <%= link_to 'Back', goods_path %>
+</div>
