--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -2,26 +2,27 @@
   <% if property.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(property.errors.count, "error") %> prohibited this property from being saved:</h2>
-
       <ul>
-      <% property.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+        <% property.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
+  <div class="form-group">
     <%= form.label :description %>
-    <%= form.text_field :description %>
+    <%= form.text_field :description, class: 'form-control' %>
   </div>
-
-  <div class="field">
-    <%= form.label :active %>
-    <%= form.check_box :active %>
+  <div class="custom-control custom-checkbox">
+    <%= form.check_box :active, checked: true, class: 'custom-control-input' %>
+    <%= form.label :active, class: 'custom-control-label' %>
   </div>
-
-  <div class="actions">
-    <%= form.submit %>
+  <div class="form-actions">
+    <%= form.submit class: 'btn btn-success'  %>
+    <% if action_name == 'edit' %>
+      <%= link_to :back, property_path(property), class: 'btn btn-primary' %>
+    <% else %>
+      <%= link_to :back, properties_path, class: 'btn btn-primary' %>
+    <% end %>
   </div>
 <% end %>
