--- a/app/views/properties/edit.html.erb
+++ b/app/views/properties/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Property</h1>
-
-<%= render 'form', property: @property %>
-
-<%= link_to 'Show', @property %> |
-<%= link_to 'Back', properties_path %>
+<div class="container">
+  <h1>Editing Property</h1>
+  <%= render 'form', property: @property %>
+</div>
