--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -1,29 +1,27 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Properties</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Description</th>
-      <th>Active</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @properties.each do |property| %>
-      <tr>
-        <td><%= property.description %></td>
-        <td><%= property.active %></td>
-        <td><%= link_to 'Show', property %></td>
-        <td><%= link_to 'Edit', edit_property_path(property) %></td>
-        <td><%= link_to 'Destroy', property, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Property', new_property_path %>
+<div class="container">
+  <p id="notice"><%= notice %></p>
+  <div class="row">
+    <h1>Properties</h1>
+    <div class="ml-auto mt-2">
+      <%= link_to 'New Property', new_property_path, class: 'btn btn-success' %>
+    </div>
+  </div>
+  <div class="row">
+    <table class="table table-bordered table-hover">
+      <thead>
+        <tr>
+          <th>Description</th>
+          <th>Active</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @properties.each do |property| %>
+          <tr>
+            <td><%= link_to property.description, property %></td>
+            <td><%= property.active %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
