adicionado css as views de properties, departments e goods, adicionado enum aos models de goods, departments e properties

--- a/app/views/departments/edit.html.erb
+++ b/app/views/departments/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Department</h1>
-
-<%= render 'form', department: @department %>
-
-<%= link_to 'Show', @department %> |
-<%= link_to 'Back', departments_path %>
+<div class="container">
+  <h1>Editing Department</h1>
+  <%= render 'form', department: @department, properties: @properties %>
+</div>
