--- a/app/views/goods/_form.html.erb
+++ b/app/views/goods/_form.html.erb
@@ -23,11 +23,11 @@
   </div>
   <div class="form-group">
     <%= form.label :situation %>
-    <%= form.number_field :situation, class: 'form-control' %>
+    <%= form.select :situation, Good.situations.keys.map { |k|  [k, k] }, { prompt: :select_text }, class: 'form-control' %>
   </div>
   <div class="form-group">
-    <%= form.label :purchase_value %>
-    <%= form.text_field :purchase_value, class: 'form-control' %>
+    <%= form.label :purchase_price %>
+    <%= form.text_field :purchase_price, class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= form.label :purchase_date %>
@@ -36,6 +36,14 @@
   <div class="form-group">
     <%= form.label :base_date %>
     <%= form.date_select :base_date %>
+  </div>
+  <div class="form-group">
+    <%= form.label :good_category_id %>
+    <%= form.select :good_category_id, good_categories, { prompt: :select_text }, class: 'form-control' %>
+  </div>
+  <div class="form-group">
+    <%= form.label :department_id %>
+    <%= form.select :department_id, departments, { prompt: :select_text }, class: 'form-control' %>
   </div>
   <div class="actions">
     <%= form.submit class: 'btn btn-success' %>
