--- a/app/views/departments/_form.html.erb
+++ b/app/views/departments/_form.html.erb
@@ -2,31 +2,31 @@
   <% if department.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(department.errors.count, "error") %> prohibited this department from being saved:</h2>
-
       <ul>
-      <% department.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+        <% department.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
+  <div class="form-group">
     <%= form.label :description %>
-    <%= form.text_field :description %>
+    <%= form.text_field :description, class: 'form-control'  %>
   </div>
-
-  <div class="field">
+  <div class="form-group">
     <%= form.label :property_id %>
-    <%= form.text_field :property_id %>
+    <%= form.select :property_id, properties, { prompt: :select_text }, class: 'form-control' %>
   </div>
-
-  <div class="field">
-    <%= form.label :active %>
-    <%= form.check_box :active %>
+  <div class="custom-control custom-checkbox">
+    <%= form.check_box :active, checked: true, class: 'custom-control-input' %>
+    <%= form.label :active, class: 'custom-control-label' %>
   </div>
-
-  <div class="actions">
-    <%= form.submit %>
+  <div class="form-actions">
+    <%= form.submit class: 'btn btn-success'  %>
+    <% if action_name == 'edit' %>
+      <%= link_to :back, department_path(department), class: 'btn btn-primary' %>
+    <% else %>
+      <%= link_to :back, departments_path, class: 'btn btn-primary' %>
+    <% end %>
   </div>
 <% end %>
