--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -1,31 +1,29 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Departments</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Description</th>
-      <th>Property</th>
-      <th>Active</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @departments.each do |department| %>
-      <tr>
-        <td><%= department.description %></td>
-        <td><%= department.property %></td>
-        <td><%= department.active %></td>
-        <td><%= link_to 'Show', department %></td>
-        <td><%= link_to 'Edit', edit_department_path(department) %></td>
-        <td><%= link_to 'Destroy', department, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Department', new_department_path %>
+<div class="container">
+  <p id="notice"><%= notice %></p>
+  <div class="row">
+    <h1>Departments</h1>
+    <div class="ml-auto mt-2">
+      <%= link_to 'New Department', new_department_path, class: 'btn btn-success' %>
+    </div>
+  </div>
+  <div class="row">
+    <table class="table table-bordered table-hover">
+      <thead>
+        <tr>
+          <th>Description</th>
+          <th>Property</th>
+          <th>Active</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @departments.each do |department| %>
+          <tr>
+            <td><%= link_to department.description, department %></td>
+            <td><%= department.property.description %></td>
+            <td><%= department.active %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
