--- a/app/views/departments/new.html.erb
+++ b/app/views/departments/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Department</h1>
-
-<%= render 'form', department: @department %>
-
-<%= link_to 'Back', departments_path %>
+<div class="container">
+  <h1>New Department</h1>
+  <%= render 'form', department: @department, properties: @properties %>
+</div>
