--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -1,39 +1,41 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Goods</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Code</th>
-      <th>Description</th>
-      <th>Specification</th>
-      <th>Situation</th>
-      <th>Purchase value</th>
-      <th>Purchase date</th>
-      <th>Base date</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @goods.each do |good| %>
-      <tr>
-        <td><%= good.code %></td>
-        <td><%= good.description %></td>
-        <td><%= good.specification %></td>
-        <td><%= good.situation %></td>
-        <td><%= good.purchase_value %></td>
-        <td><%= good.purchase_date %></td>
-        <td><%= good.base_date %></td>
-        <td><%= link_to 'Show', good %></td>
-        <td><%= link_to 'Edit', edit_good_path(good) %></td>
-        <td><%= link_to 'Destroy', good, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Good', new_good_path %>
+<div class="container">
+  <p id="notice"><%= notice %></p>
+  <div class="row">
+    <h1>Goods</h1>
+    <div class="ml-auto mt-2">
+      <%= link_to 'New Good', new_good_path, class: 'btn btn-success' %>
+    </div>
+  </div>
+  <div class="row">
+    <table class="table table-bordered table-hover">
+      <thead>
+        <tr>
+          <th>Code</th>
+          <th>Description</th>
+          <th>Specification</th>
+          <th>Situation</th>
+          <th>Purchase price</th>
+          <th>Purchase date</th>
+          <th>Base date</th>
+          <th>Category</th>
+          <th>Department</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @goods.each do |good| %>
+          <tr>
+            <td><%= good.code %></td>
+            <td><%= link_to good.description, good %></td>
+            <td><%= good.specification %></td>
+            <td><%= good.situation %></td>
+            <td><%= good.purchase_price %></td>
+            <td><%= good.purchase_date %></td>
+            <td><%= good.base_date %></td>
+            <td><%= good.good_category.description %></td>
+            <td><%= good.department.description %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
