--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,4 +4,5 @@
   <%= link_to :sub_kinds, good_sub_kinds_path, class: 'nav-link' %>
   <%= link_to :categories, good_categories_path, class: 'nav-link' %>
   <%= link_to :properties, properties_path, class: 'nav-link' %>
+  <%= link_to :departments, departments_path, class: 'nav-link' %>
 </nav>
