--- a/app/views/departments/_form.html.erb
+++ b/app/views/departments/_form.html.erb
@@ -24,9 +24,9 @@
   <div class="form-actions">
     <%= form.submit class: 'btn btn-success'  %>
     <% if action_name == 'edit' %>
-      <%= link_to :back, department_path(department), class: 'btn btn-primary' %>
+      <%= link_to t('actions.back'), department_path(department), class: 'btn btn-primary' %>
     <% else %>
-      <%= link_to :back, departments_path, class: 'btn btn-primary' %>
+      <%= link_to t('actions.back'), departments_path, class: 'btn btn-primary' %>
     <% end %>
   </div>
 <% end %>
