--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -3,16 +3,16 @@
   <div class="row">
     <h1>Departments</h1>
     <div class="ml-auto mt-2">
-      <%= link_to 'New Department', new_department_path, class: 'btn btn-success' %>
+      <%= link_to t('actions.new'), new_department_path, class: 'btn btn-success' %>
     </div>
   </div>
   <div class="row">
     <table class="table table-bordered table-hover">
       <thead>
         <tr>
-          <th>Description</th>
-          <th>Property</th>
-          <th>Active</th>
+          <th><%= @departments.human_attribute_name(:description) %></th>
+          <th><%= @departments.human_attribute_name(:property_id) %></th>
+          <th><%= @departments.human_attribute_name(:active) %></th>
         </tr>
       </thead>
       <tbody>
@@ -20,7 +20,7 @@
           <tr>
             <td><%= link_to department.description, department %></td>
             <td><%= department.property.description %></td>
-            <td><%= department.active %></td>
+            <td><%= t_active department.active %></td>
           </tr>
         <% end %>
       </tbody>
