--- a/app/views/good_categories/edit.html.erb
+++ b/app/views/good_categories/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Good Category</h1>
-
-<%= render 'form', good_category: @good_category %>
-
-<%= link_to 'Show', @good_category %> |
-<%= link_to 'Back', good_categories_path %>
+<div class=container>
+  <h1><%= t('actions.edit') %> <%= GoodCategory.model_name.human %></h1>
+  <%= render 'form', good_category: @good_category, sub_kinds: @sub_kinds %>
+</div>
