--- a/app/views/good_categories/index.html.erb
+++ b/app/views/good_categories/index.html.erb
@@ -1,31 +1,29 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Good Categories</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Description</th>
-      <th>Active</th>
-      <th>Good sub kind</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @good_categories.each do |good_category| %>
-      <tr>
-        <td><%= good_category.description %></td>
-        <td><%= good_category.active %></td>
-        <td><%= good_category.good_sub_kind %></td>
-        <td><%= link_to 'Show', good_category %></td>
-        <td><%= link_to 'Edit', edit_good_category_path(good_category) %></td>
-        <td><%= link_to 'Destroy', good_category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Good Category', new_good_category_path %>
+<div class="container">
+  <p id="notice"><%= notice %></p>
+  <div class="row">
+    <h1>Good Categories</h1>
+    <div class="ml-auto mt-2">
+      <%= link_to t('actions.new'), new_good_category_path, class: 'btn btn-success' %>
+    </div>
+  </div>
+  <div class="row">
+    <table class="table table-bordered table-hover">
+      <thead>
+        <tr>
+          <th>Description</th>
+          <th>Active</th>
+          <th>Sub kind</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @good_categories.each do |good_category| %>
+          <tr>
+            <td><%= link_to good_category.description, good_category %></td>
+            <td><%= t_active good_category.active %></td>
+            <td><%= good_category.good_sub_kind.description %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
