--- a/app/views/good_categories/show.html.erb
+++ b/app/views/good_categories/show.html.erb
@@ -1,19 +1,18 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @good_category.description %>
-</p>
-
-<p>
-  <strong>Active:</strong>
-  <%= @good_category.active %>
-</p>
-
-<p>
-  <strong>Good sub kind:</strong>
-  <%= @good_category.good_sub_kind %>
-</p>
-
-<%= link_to 'Edit', edit_good_category_path(@good_category) %> |
-<%= link_to 'Back', good_categories_path %>
+<div class="container">
+  <p id="notice"><%= notice %></p>
+  <p>
+    <strong><%= GoodCategory.human_attribute_name(:description) %>:</strong>
+    <%= @good_category.description %>
+  </p>
+  <p>
+    <strong><%= GoodCategory.human_attribute_name(:active) %>:</strong>
+    <%= t_active @good_category.active %>
+  </p>
+  <p>
+    <strong><%= GoodCategory.human_attribute_name(:good_sub_kind_id) %>:</strong>
+    <%= @good_category.good_sub_kind.description %>
+  </p>
+  <%= link_to t('actions.back'), good_categories_path, class: 'btn btn-primary' %>
+  <%= link_to t('actions.edit'), edit_good_category_path(@good_category), class: 'btn btn-primary' %>
+  <%= link_to t('actions.destroy'), @good_category, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+</div>
