--- a/app/views/good_kinds/_form.html.erb
+++ b/app/views/good_kinds/_form.html.erb
@@ -1,27 +1,28 @@
-<%= form_with(model: good_kind, local: true) do |form| %>
+  <%= form_with(model: good_kind, local: true) do |form| %>
   <% if good_kind.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(good_kind.errors.count, "error") %> prohibited this good_kind from being saved:</h2>
-
       <ul>
-      <% good_kind.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+        <% good_kind.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
+  <div class="form-group">
     <%= form.label :description %>
-    <%= form.text_field :description %>
+    <%= form.text_field :description, class: 'form-control' %>
   </div>
-
-  <div class="field">
-    <%= form.label :active %>
-    <%= form.check_box :active %>
+  <div class="custom-control custom-checkbox">
+    <%= form.check_box :active, checked: true, class: 'custom-control-input' %>
+    <%= form.label :active, class: 'custom-control-label' %>
   </div>
-
-  <div class="actions">
-    <%= form.submit %>
+  <div class="form-actions">
+    <%= form.submit class: 'btn btn-success'  %>
+    <% if action_name == 'edit' %>
+      <%= link_to t('actions.back'), good_kind_path(good_kind), class: 'btn btn-primary' %>
+    <% else %>
+      <%= link_to t('actions.back'), good_kinds_path, class: 'btn btn-primary' %>
+    <% end %>
   </div>
 <% end %>
