--- a/app/views/good_kinds/edit.html.erb
+++ b/app/views/good_kinds/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Good Kind</h1>
-
-<%= render 'form', good_kind: @good_kind %>
-
-<%= link_to 'Show', @good_kind %> |
-<%= link_to 'Back', good_kinds_path %>
+<div class="container">
+  <h1><%= t('actions.edit') %> <%= t(GoodKind.model_name.human) %></h1>
+  <%= render 'form', good_kind: @good_kind %>
+</div>
