--- a/app/views/good_kinds/index.html.erb
+++ b/app/views/good_kinds/index.html.erb
@@ -1,29 +1,27 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Good Kinds</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Description</th>
-      <th>Active</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @good_kinds.each do |good_kind| %>
-      <tr>
-        <td><%= good_kind.description %></td>
-        <td><%= good_kind.active %></td>
-        <td><%= link_to 'Show', good_kind %></td>
-        <td><%= link_to 'Edit', edit_good_kind_path(good_kind) %></td>
-        <td><%= link_to 'Destroy', good_kind, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Good Kind', new_good_kind_path %>
+<div class="container">
+  <p id="notice"><%= notice %></p>
+  <div class="row">
+    <h1><%= @good_kinds.model_name.human(count: 2) %></h1>
+    <div class="ml-auto mt-2">
+      <%= link_to t('actions.new'), new_good_kind_path, class: 'btn btn-success' %>
+    </div>
+  </div>
+  <div class="row">
+    <table class="table table-bordered table-hover">
+      <thead>
+        <tr>
+          <th><%= @good_kinds.human_attribute_name(:description) %></th>
+          <th><%= @good_kinds.human_attribute_name(:active) %></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @good_kinds.each do |good_kind| %>
+          <tr>
+            <td><%= link_to good_kind.description, good_kind %></td>
+            <td><%= t_active good_kind.active %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
