--- a/app/views/good_kinds/new.html.erb
+++ b/app/views/good_kinds/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Good Kind</h1>
-
-<%= render 'form', good_kind: @good_kind %>
-
-<%= link_to 'Back', good_kinds_path %>
+<div class="container">
+  <h1><%= t('actions.new') %> <%= t(GoodKind.model_name.human) %></h1>
+  <%= render 'form', good_kind: @good_kind %>
+</div>
