--- a/app/views/good_sub_kinds/_form.html.erb
+++ b/app/views/good_sub_kinds/_form.html.erb
@@ -2,31 +2,31 @@
   <% if good_sub_kind.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(good_sub_kind.errors.count, "error") %> prohibited this good_sub_kind from being saved:</h2>
-
       <ul>
-      <% good_sub_kind.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+        <% good_sub_kind.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
+  <div class="form-group">
     <%= form.label :description %>
-    <%= form.text_field :description %>
+    <%= form.text_field :description, class: 'form-control' %>
   </div>
-
-  <div class="field">
-    <%= form.label :active %>
-    <%= form.check_box :active %>
+  <div class="custom-control custom-checkbox">
+    <%= form.check_box :active, checked: true, class: 'custom-control-input' %>
+    <%= form.label :active, class: 'custom-control-label' %>
   </div>
-
-  <div class="field">
+  <div class="form-group">
     <%= form.label :good_kind_id %>
-    <%= form.text_field :good_kind_id %>
+    <%= form.select :good_kind_id, good_kinds, { prompt: :select_text }, class: 'form-control' %>
   </div>
-
-  <div class="actions">
-    <%= form.submit %>
+  <div class="form-actions">
+    <%= form.submit class: 'btn btn-success'  %>
+    <% if action_name == 'edit' %>
+      <%= link_to t('actions.back'), good_sub_kind_path(good_sub_kind), class: 'btn btn-primary' %>
+    <% else %>
+      <%= link_to t('actions.back'), good_sub_kinds_path, class: 'btn btn-primary' %>
+    <% end %>
   </div>
 <% end %>
