--- a/app/views/good_sub_kinds/index.html.erb
+++ b/app/views/good_sub_kinds/index.html.erb
@@ -1,31 +1,29 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Good Sub Kinds</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Description</th>
-      <th>Active</th>
-      <th>Good kind</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @good_sub_kinds.each do |good_sub_kind| %>
-      <tr>
-        <td><%= good_sub_kind.description %></td>
-        <td><%= good_sub_kind.active %></td>
-        <td><%= good_sub_kind.good_kind %></td>
-        <td><%= link_to 'Show', good_sub_kind %></td>
-        <td><%= link_to 'Edit', edit_good_sub_kind_path(good_sub_kind) %></td>
-        <td><%= link_to 'Destroy', good_sub_kind, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Good Sub Kind', new_good_sub_kind_path %>
+<div class="container">
+  <p id="notice"><%= notice %></p>
+  <div class="row">
+    <h1><%= GoodSubKind.model_name.human(count: 2) %></h1>
+    <div class="ml-auto mt-2">
+      <%= link_to t('actions.new'), new_good_sub_kind_path, class: 'btn btn-success' %>
+    </div>
+  </div>
+  <div class="row">
+    <table class="table table-bordered table-hover">
+      <thead>
+        <tr>
+          <th><%= @good_sub_kinds.human_attribute_name(:description) %></th>
+          <th><%= @good_sub_kinds.human_attribute_name(:good_kind_id) %></th>
+          <th><%= @good_sub_kinds.human_attribute_name(:active) %></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @good_sub_kinds.each do |good_sub_kind| %>
+          <tr>
+            <td><%= link_to good_sub_kind.description , good_sub_kind %></td>
+            <td><%= good_sub_kind.good_kind.description %></td>
+            <td><%= t_active good_sub_kind.active %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
