--- a/app/views/good_sub_kinds/new.html.erb
+++ b/app/views/good_sub_kinds/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Good Sub Kind</h1>
-
-<%= render 'form', good_sub_kind: @good_sub_kind %>
-
-<%= link_to 'Back', good_sub_kinds_path %>
+<div class="container">
+  <h1><%= t('actions.new') %> <%= t(@good_sub_kind.model_name.human) %></h1>
+  <%= render 'form', good_sub_kind: @good_sub_kind, good_kinds: @good_kinds %>
+</div>
