--- a/app/views/goods/_form.html.erb
+++ b/app/views/goods/_form.html.erb
@@ -23,7 +23,7 @@
   </div>
   <div class="form-group">
     <%= form.label :situation %>
-    <%= form.select :situation, Good.situations.keys.map { |k|  [k, k] }, { prompt: :select_text }, class: 'form-control' %>
+    <%= form.select :situation, Good.situations.keys.map { |k| [Good.t_situation(k), k] }, { prompt: :select_text }, class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= form.label :purchase_price %>
@@ -48,9 +48,9 @@
   <div class="actions">
     <%= form.submit class: 'btn btn-success' %>
     <% if action_name == 'edit' %>
-      <%= link_to :back, good_path(good), class: 'btn btn-primary' %>
+      <%= link_to t('actions.back'), good_path(good), class: 'btn btn-primary' %>
     <% else %>
-      <%= link_to :back, goods_path, class: 'btn btn-primary' %>
+      <%= link_to t('actions.back'), goods_path, class: 'btn btn-primary' %>
     <% end %>
   </div>
 <% end %>
