--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -4,7 +4,7 @@
     <%= @department.description %>
   </p>
   <p>
-    <strong><%= Department.human_attribute_name(:property) %>:</strong>
+    <strong><%= Department.human_attribute_name(:property_id) %>:</strong>
     <%= @department.property.description %>
   </p>
   <p>
