--- a/app/views/departments/edit.html.erb
+++ b/app/views/departments/edit.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
-  <h1>Editing Department</h1>
+  <h1><%= t('actions.edit') %> <%= @department.model_name.human %></h1>
   <%= render 'form', department: @department, properties: @properties %>
 </div>
