--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
   <div class="row">
-    <h1>Departments</h1>
+    <h1><%= @departments.model_name.human(count: 2) %></h1>
     <div class="ml-auto mt-2">
       <%= link_to t('actions.new'), new_department_path, class: 'btn btn-success' %>
     </div>
