--- a/app/views/goods/show.html.erb
+++ b/app/views/goods/show.html.erb
@@ -1,41 +1,21 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
-  <p>
-    <strong><%= Good.human_attribute_name(:code) %>:</strong>
-    <%= @good.code %>
-  </p>
-  <p>
-    <strong><%= Good.human_attribute_name(:description) %>:</strong>
-    <%= @good.description %>
-  </p>
-  <p>
-    <strong><%= Good.human_attribute_name(:specification) %>:</strong>
-    <%= @good.specification %>
-  </p>
-  <p>
-    <strong><%= Good.human_attribute_name(:situation) %>:</strong>
-    <%= Good.t_situation @good.situation %>
-  </p>
-  <p>
-    <strong><%= Good.human_attribute_name(:purchase_price) %>:</strong>
-    <%= @good.purchase_price %>
-  </p>
-  <p>
-    <strong><%= Good.human_attribute_name(:purchase_date) %>:</strong>
-    <%= @good.purchase_date %>
-  </p>
-  <p>
-    <strong><%= Good.human_attribute_name(:base_date) %>:</strong>
-    <%= @good.base_date %>
-  </p>
-  <p>
-    <strong><%= Good.human_attribute_name(:good_category_id) %>:</strong>
-    <%= @good.good_category.description %>
-  </p>
-  <p>
-    <strong><%= Good.human_attribute_name(:department_id) %>:</strong>
-    <%= @good.department.description %>
-  </p>
+  <ul class="nav nav-tabs" id="good_tab" role="tablist">
+    <li class="nav-item">
+      <a class="nav-link active" id="register-tab" data-toggle="tab" href="#register" role="tab" aria-controls="register" aria-selected="true"><%= t('views.goods.register') %></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" id="movements-tab" data-toggle="tab" href="#movements" role="tab" aria-controls="movements" aria-selected="false"><%= t('views.goods.movements') %></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" id="financial-movements-tab" data-toggle="tab" href="#financial-movements" role="tab" aria-controls="financial-movements" aria-selected="false"> <%= t('views.goods.financial_movements') %></a>
+    </li>
+  </ul>
+  <div class="tab-content" id="good_tab_content">
+    <%= render 'goods/show_tabs/register', good: @good %>
+    <%= render 'goods/show_tabs/movements', good: @good, movements: @good.movements.includes(:department, :movement_kind) %>
+    <%= render 'goods/show_tabs/financial_movements', good: @good %>
+  </div>
   <%= link_to t('actions.back'), goods_path, class: 'btn btn-primary' %>
   <%= link_to t('actions.edit'), edit_good_path(@good), class: 'btn btn-primary' %>
   <%= link_to t('actions.destroy'), @good, method: :delete, data: { confirm: t(:confirm) }, class: 'btn btn-danger' %>
