--- a/app/views/goods/show_tabs/_movements.html.erb
+++ b/app/views/goods/show_tabs/_movements.html.erb
@@ -1,5 +1,6 @@
 <div class="tab-pane fade" id="movements" role="tabpanel" aria-labelledby="movements-tab">
-  <table class="table table-bordered table-hover">
+  <%= button_tag t('views.goods.actions.move'), id: 'new-movement-btn', class: 'btn btn-success mb-3', data: { toggle: 'modal', target: '#new-movement-modal' } %>
+  <table id="movements-table" class="table table-bordered table-hover">
     <thead>
       <tr>
         <th><%= movements.human_attribute_name(:code) %></th>
@@ -19,4 +20,5 @@
       <% end %>
     </tbody>
   </table>
+  <%= render 'goods/modals/new_movement', good: good, departments: departments, movement_kids: movement_kids %>
 </div>
