--- a/app/views/goods/show_tabs/_register.html.erb
+++ b/app/views/goods/show_tabs/_register.html.erb
@@ -17,7 +17,7 @@
   </p>
   <p>
     <strong><%= Good.human_attribute_name(:purchase_price) %>:</strong>
-    <%= @good.purchase_price %>
+    <%= number_with_precision(@good.purchase_price, precision: 2) %>
   </p>
   <p>
     <strong><%= Good.human_attribute_name(:purchase_date) %>:</strong>
@@ -35,4 +35,7 @@
     <strong><%= Good.human_attribute_name(:department_id) %>:</strong>
     <%= @good.department.description %>
   </p>
+  <%= link_to t('actions.back'), goods_path, class: 'btn btn-primary' %>
+  <%= link_to t('actions.edit'), edit_good_path(@good), class: 'btn btn-primary' %>
+  <%= link_to t('actions.destroy'), @good, method: :delete, data: { confirm: t(:confirm) }, class: 'btn btn-danger' %>
 </div>
