--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -16,4 +16,11 @@
 //= require jquery3
 //= require popper
 //= require bootstrap
+//= require bootstrap-datepicker
 //= require_tree .
+$(document).ready(function () {
+  $('.datepicker').datepicker({
+    todayBtn: "linked",
+    language: "<%= I18n.locale %>"
+  });
+});
