--- a/app/views/goods/modals/_new_movement.html.erb
+++ b/app/views/goods/modals/_new_movement.html.erb
@@ -11,7 +11,10 @@
         <div class="modal-body">
           <div class="form-group">
             <%= form.label :date %>
-            <%= form.date_select :date, class: 'form-control' %>
+            <div class="input-group date">
+              <%= form.text_field :date, class: 'form-control' %>
+              <span class="input-group-addon"><%= fa_icon('calendar-alt') %></span>
+            </div>
           </div>
           <div class="form-group">
             <%= form.label :department_id %>
