--- a/app/views/goods/modals/_new_movement.html.erb
+++ b/app/views/goods/modals/_new_movement.html.erb
@@ -11,9 +11,11 @@
         <div class="modal-body">
           <div class="form-group">
             <%= form.label :date %>
-            <div class="input-group date">
-              <%= form.text_field :date, class: 'form-control' %>
-              <span class="input-group-addon"><%= fa_icon('calendar-alt') %></span>
+            <div class="input-group date-input-group">
+              <%= form.text_field :date, class: 'form-control datepicker' %>
+              <div class="input-group-append">
+                <%= button_tag fa_icon('calendar'), id: 'btn-datepicker', class: 'btn btn-outline-secondary', type: 'button' %>
+              </div>
             </div>
           </div>
           <div class="form-group">
