implementado helper para o datepicker

--- a/app/views/goods/new.html.erb
+++ b/app/views/goods/new.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
   <h1><%= t('actions.new') %> <%= @good.model_name.human %></h1>
-  <%= render 'form', good: @good, good_categories: @good_categories, departments: @departments %>
+  <%= render 'form', good: @good, good_categories: @good_categories, departments: @departments, situations: @situations %>
 </div>
