--- a/app/views/goods/_form.html.erb
+++ b/app/views/goods/_form.html.erb
@@ -22,20 +22,20 @@
     <%= form.text_area :specification, class: 'form-control' %>
   </div>
   <div class="form-group">
-    <%= form.label :situation %>
-    <%= form.select :situation, Good.situations.keys.map { |k| [Good.t_situation(k), k] }, { prompt: :select_text }, class: 'form-control' %>
+    <%= form.label :situation_kind %>
+    <%= form.select :situation_kind, situations, { prompt: :select_text }, class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= form.label :purchase_price %>
-    <%= form.text_field :purchase_price, class: 'form-control' %>
+    <%= form.text_field :purchase_price, value: (number_with_precision(form.object.purchase_price, precision: 2) if form.object.purchase_price), class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= form.label :purchase_date %>
-    <%= form.date_select :purchase_date %>
+    <%= datepicker_field(form, :purchase_date) %>
   </div>
   <div class="form-group">
     <%= form.label :base_date %>
-    <%= form.date_select :base_date %>
+    <%= datepicker_field(form, :base_date) %>
   </div>
   <div class="form-group">
     <%= form.label :good_category_id %>
