--- a/app/views/goods/modals/_new_movement.html.erb
+++ b/app/views/goods/modals/_new_movement.html.erb
@@ -11,12 +11,7 @@
         <div class="modal-body">
           <div class="form-group">
             <%= form.label :date %>
-            <div class="input-group date-input-group">
-              <%= form.text_field :date, class: 'form-control datepicker' %>
-              <div class="input-group-append">
-                <%= button_tag fa_icon('calendar'), id: 'btn-datepicker', class: 'btn btn-outline-secondary', type: 'button' %>
-              </div>
-            </div>
+            <%= datepicker_field(form, :date) %>
           </div>
           <div class="form-group">
             <%= form.label :department_id %>
