--- a/app/views/good_categories/new.html.erb
+++ b/app/views/good_categories/new.html.erb
@@ -1,4 +1,4 @@
 <div class=container>
-  <h1><%= t('actions.new') %> <%= GoodCategory.model_name.human %></h1>
+  <h1><%= t('views.good_categories.new.title') %></h1>
   <%= render 'form', good_category: @good_category, sub_kinds: @sub_kinds %>
 </div>
