--- a/app/views/good_kinds/show.html.erb
+++ b/app/views/good_kinds/show.html.erb
@@ -8,7 +8,7 @@
     <strong><%= GoodKind.human_attribute_name(:active) %>:</strong>
     <%= t_active @good_kind.active %>
   </p>
-  <%= link_to t('actions.back'), good_kinds_path, class: 'btn btn-primary' %>
-  <%= link_to t('actions.edit'), edit_good_kind_path(@good_kind), class: 'btn btn-primary' %>
-  <%= link_to t('actions.destroy'), @property, method: :delete, data: { confirm: t(:confirm) }, class: 'btn btn-danger' %>
+  <%= link_to t('views.actions.back'), good_kinds_path, class: 'btn btn-primary' %>
+  <%= link_to t('views.actions.edit'), edit_good_kind_path(@good_kind), class: 'btn btn-primary' %>
+  <%= link_to t('views.actions.destroy'), @property, method: :delete, data: { confirm: t('views.confirm') }, class: 'btn btn-danger' %>
 </div>
