--- a/app/views/good_sub_kinds/show.html.erb
+++ b/app/views/good_sub_kinds/show.html.erb
@@ -12,7 +12,7 @@
     <strong><%= GoodSubKind.human_attribute_name(:good_kind_id) %>:</strong>
     <%= @good_sub_kind.good_kind.description %>
   </p>
-  <%= link_to t('actions.back'), good_sub_kinds_path, class: 'btn btn-primary' %>
-  <%= link_to t('actions.edit'), edit_good_sub_kind_path(@good_sub_kind), class: 'btn btn-primary' %>
-  <%= link_to t('actions.destroy'), @good_sub_kind, method: :delete, data: { confirm: t(:confirm) }, class: 'btn btn-danger' %>
+  <%= link_to t('views.actions.back'), good_sub_kinds_path, class: 'btn btn-primary' %>
+  <%= link_to t('views.actions.edit'), edit_good_sub_kind_path(@good_sub_kind), class: 'btn btn-primary' %>
+  <%= link_to t('views.actions.destroy'), @good_sub_kind, method: :delete, data: { confirm: t(:confirm) }, class: 'btn btn-danger' %>
 </div>
