--- a/app/views/properties/edit.html.erb
+++ b/app/views/properties/edit.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
-  <h1><%= t('actions.edit') %> <%= @property.model_name.human %></h1>
+  <h1><%= t('views.properties.edit.title') %></h1>
   <%= render 'form', property: @property %>
 </div>
