--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -18,7 +18,7 @@
 //= require bootstrap
 //= require bootstrap-datepicker
 //= require_tree .
-$(document).ready(function () {
+$(document).on("turbolinks:load", function () {
   $('#btn-datepicker').on('click', function () {
     $('.datepicker').datepicker('show')
   })
