--- a/app/views/good_kinds/_form.html.erb
+++ b/app/views/good_kinds/_form.html.erb
@@ -20,9 +20,9 @@
   <div class="form-actions">
     <%= form.submit class: 'btn btn-success'  %>
     <% if action_name == 'edit' %>
-      <%= link_to t('actions.back'), good_kind_path(good_kind), class: 'btn btn-primary' %>
+      <%= link_to t('views.actions.back'), good_kind_path(good_kind), class: 'btn btn-primary' %>
     <% else %>
-      <%= link_to t('actions.back'), good_kinds_path, class: 'btn btn-primary' %>
+      <%= link_to t('views.actions.back'), good_kinds_path, class: 'btn btn-primary' %>
     <% end %>
   </div>
 <% end %>
