--- a/app/views/good_kinds/new.html.erb
+++ b/app/views/good_kinds/new.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
-  <h1><%= t('actions.new') %> <%= t(GoodKind.model_name.human) %></h1>
+  <h1><%= t('views.good_kinds.new.title') %></h1>
   <%= render 'form', good_kind: @good_kind %>
 </div>
