--- a/app/views/good_sub_kinds/new.html.erb
+++ b/app/views/good_sub_kinds/new.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
-  <h1><%= t('actions.new') %> <%= t(@good_sub_kind.model_name.human) %></h1>
+  <h1><%= t('views.good_sub_kinds.new.title') %> <%= t(@good_sub_kind.model_name.human) %></h1>
   <%= render 'form', good_sub_kind: @good_sub_kind, good_kinds: @good_kinds %>
 </div>
