--- a/app/views/goods/_form.html.erb
+++ b/app/views/goods/_form.html.erb
@@ -22,8 +22,8 @@
     <%= form.text_area :specification, class: 'form-control' %>
   </div>
   <div class="form-group">
-    <%= form.label :situation_kind %>
-    <%= form.select :situation_kind, situations, { prompt: :select_text }, class: 'form-control' %>
+    <%= form.label :good_situation_id %>
+    <%= form.select :good_situation_id, situations, { prompt: :select_text }, class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= form.label :purchase_price %>
@@ -48,9 +48,9 @@
   <div class="actions">
     <%= form.submit class: 'btn btn-success' %>
     <% if action_name == 'edit' %>
-      <%= link_to t('actions.back'), good_path(good), class: 'btn btn-primary' %>
+      <%= link_to t('views.actions.back'), good_path(good), class: 'btn btn-primary' %>
     <% else %>
-      <%= link_to t('actions.back'), goods_path, class: 'btn btn-primary' %>
+      <%= link_to t('views.actions.back'), goods_path, class: 'btn btn-primary' %>
     <% end %>
   </div>
 <% end %>
