--- a/app/views/goods/edit.html.erb
+++ b/app/views/goods/edit.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
-  <h1><%= t('actions.edit') %> <%= t(@good.model_name.human) %></h1>
+  <h1><%= t('views.goods.edit.title') %></h1>
   <%= render 'form', good: @good, good_categories: @good_categories, departments: @departments, situations: @situations %>
 </div>
