--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <h1><%= @goods.model_name.human(count: 2) %></h1>
     <div class="ml-auto mt-2">
-      <%= link_to t('actions.new'), new_good_path, class: 'btn btn-success' %>
+      <%= link_to t('views.goods.new.title'), new_good_path, class: 'btn btn-success' %>
     </div>
   </div>
   <div class="row">
