--- a/app/views/goods/show.html.erb
+++ b/app/views/goods/show.html.erb
@@ -2,13 +2,13 @@
   <p id="notice"><%= notice %></p>
   <ul class="nav nav-tabs" id="good_tab" role="tablist">
     <li class="nav-item">
-      <a class="nav-link active" id="register-tab" data-toggle="tab" href="#register" role="tab" aria-controls="register" aria-selected="true"><%= t('views.goods.register') %></a>
+      <a class="nav-link active" id="register-tab" data-toggle="tab" href="#register" role="tab" aria-controls="register" aria-selected="true"><%= t('views.goods.register.title') %></a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" id="movements-tab" data-toggle="tab" href="#movements" role="tab" aria-controls="movements" aria-selected="false"><%= t('views.goods.movements') %></a>
+      <a class="nav-link" id="movements-tab" data-toggle="tab" href="#movements" role="tab" aria-controls="movements" aria-selected="false"><%= t('views.goods.movements.title') %></a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" id="financial-movements-tab" data-toggle="tab" href="#financial-movements" role="tab" aria-controls="financial-movements" aria-selected="false"> <%= t('views.goods.financial_movements') %></a>
+      <a class="nav-link" id="financial-movements-tab" data-toggle="tab" href="#financial-movements" role="tab" aria-controls="financial-movements" aria-selected="false"> <%= t('views.goods.financial_movements.title') %></a>
     </li>
   </ul>
   <div class="tab-content" id="good_tab_content">
