--- a/app/views/goods/show_tabs/_movements.html.erb
+++ b/app/views/goods/show_tabs/_movements.html.erb
@@ -1,5 +1,5 @@
 <div class="tab-pane fade" id="movements" role="tabpanel" aria-labelledby="movements-tab">
-  <%= button_tag t('views.goods.actions.move'), id: 'new-movement-btn', class: 'btn btn-success mb-3', data: { toggle: 'modal', target: '#new-movement-modal' } %>
+  <%= button_tag t('views.movements.actions.move'), id: 'new-movement-btn', class: 'btn btn-success mb-3', data: { toggle: 'modal', target: '#new-movement-modal' } %>
   <table id="movements-table" class="table table-bordered table-hover">
     <thead>
       <tr>
