--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,20 +1,20 @@
 <ul id="menu" class="nav flex-column">
   <li class="nav-item">
-    <%= link_to t(:goods), goods_path, class: 'nav-link' %>
+    <%= link_to Good.model_name.human(count: 2), goods_path, class: 'nav-link' %>
   </li>
   <li class="nav-item">
-    <%= link_to t(:kinds), good_kinds_path, class: 'nav-link' %>
+    <%= link_to GoodKind.model_name.human(count: 2), good_kinds_path, class: 'nav-link' %>
   </li>
   <li class="nav-item">
-    <%= link_to t(:sub_kinds), good_sub_kinds_path, class: 'nav-link' %>
+    <%= link_to GoodSubKind.model_name.human(count: 2), good_sub_kinds_path, class: 'nav-link' %>
   </li>
   <li class="nav-item">
-    <%= link_to t(:categories), good_categories_path, class: 'nav-link' %>
+    <%= link_to GoodCategory.model_name.human(count: 2), good_categories_path, class: 'nav-link' %>
   </li>
   <li class="nav-item">
-    <%= link_to t(:properties), properties_path, class: 'nav-link' %>
+    <%= link_to Property.model_name.human(count: 2), properties_path, class: 'nav-link' %>
   </li>
   <li class="nav-item">
-    <%= link_to t(:departments), departments_path, class: 'nav-link' %>
+    <%= link_to Department.model_name.human(count: 2), departments_path, class: 'nav-link' %>
   </li>
 </ul>
